# Jalon05

./: README.md  create-project-files.sh  open.sh  test.sh
src/: CMakeLists.txt
src/jalon05/: CMakeLists.txt  channel.c  channel.h  client.c  couleur.c  couleur.h  fctsocket.c  fctsocket.h  gestion_pseudo.c  gestion_pseudo.h  help.txt  rcvd_mode.c  rcvd_mode.h  send_mode.c  send_mode.h  server.c
